// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot after data has been loaded 1`] = `
<div>
  <nav
    aria-label="Breadcrumbs"
    role="navigation"
  >
    <ol
      class="breadcrumbs"
    >
      <li
        class="breadcrumbs__crumb"
      >
        <a
          data-qa-sel="breadcrumb-administration-link"
          href="/"
        >
          Administration
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <a
          data-qa-sel="breadcrumb-user-link"
          href="/users"
        >
          Users
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <a
          href="/users/1"
        >
          Kristin Patrick
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <span>
          Delete user
        </span>
      </li>
    </ol>
  </nav>
  <script
    type="application/ld+json"
  >
    {
  "@context": "http://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "position": 1,
      "item": {
        "@id": "/",
        "name": "Administration"
      }
    },
    {
      "@type": "ListItem",
      "position": 2,
      "item": {
        "@id": "/users",
        "name": "Users"
      }
    },
    {
      "@type": "ListItem",
      "position": 3,
      "item": {
        "@id": "/users/1",
        "name": "Kristin Patrick"
      }
    },
    {
      "@type": "ListItem",
      "position": 4,
      "item": {
        "name": "Delete user"
      }
    }
  ]
}
  </script>
  <div
    class="page-header"
  >
    <h1
      class="page-header__heading "
    >
      <span
        class="page-header__pre-heading"
      >
        Are you sure you want to delete user?
      </span>
      Kristin Patrick
    </h1>
    <p
      class="page-header__cta"
    >
      <button
        class="btn btn--cta"
        data-qa-sel="confirm-delete-user"
        type="button"
      >
        Confirm
      </button>
      <a
        class="btn btn--secondary"
        href="/users/1"
      >
        Cancel
      </a>
    </p>
  </div>
  <hr
    class="mv--b"
  />
  <div
    class="grid pv--d"
  >
    <div
      data-g="3"
    >
      <span
        class="detailsLabel"
      >
        Email address
      </span>
    </div>
    <div
      data-g="9"
    >
      <span>
        kristin.patrick@example.com
      </span>
    </div>
  </div>
</div>
`;

exports[`should show error message when fetchData function returns 401 error 1`] = `
<div>
  <nav
    aria-label="Breadcrumbs"
    role="navigation"
  >
    <ol
      class="breadcrumbs"
    >
      <li
        class="breadcrumbs__crumb"
      >
        <a
          data-qa-sel="breadcrumb-administration-link"
          href="/"
        >
          Administration
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <a
          data-qa-sel="breadcrumb-user-link"
          href="/users"
        >
          Users
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <span>
          Error
        </span>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <span>
          Delete user
        </span>
      </li>
    </ol>
  </nav>
  <script
    type="application/ld+json"
  >
    {
  "@context": "http://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "position": 1,
      "item": {
        "@id": "/",
        "name": "Administration"
      }
    },
    {
      "@type": "ListItem",
      "position": 2,
      "item": {
        "@id": "/users",
        "name": "Users"
      }
    },
    {
      "@type": "ListItem",
      "position": 3,
      "item": {
        "name": "Error"
      }
    },
    {
      "@type": "ListItem",
      "position": 4,
      "item": {
        "name": "Delete user"
      }
    }
  ]
}
  </script>
  <div
    class="page-header"
  >
    <h1
      class="page-header__heading "
    >
      Error
    </h1>
  </div>
  <div
    class="alert alert--error"
    role="alert"
  >
    <h2>
      Whoops
    </h2>
    <p>
      Sorry, there's been an error!
    </p>
  </div>
</div>
`;

exports[`should show error message when fetchData function returns 500 error 1`] = `
<div>
  <nav
    aria-label="Breadcrumbs"
    role="navigation"
  >
    <ol
      class="breadcrumbs"
    >
      <li
        class="breadcrumbs__crumb"
      >
        <a
          data-qa-sel="breadcrumb-administration-link"
          href="/"
        >
          Administration
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <a
          data-qa-sel="breadcrumb-user-link"
          href="/users"
        >
          Users
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <span>
          Error
        </span>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <span>
          Delete user
        </span>
      </li>
    </ol>
  </nav>
  <script
    type="application/ld+json"
  >
    {
  "@context": "http://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "position": 1,
      "item": {
        "@id": "/",
        "name": "Administration"
      }
    },
    {
      "@type": "ListItem",
      "position": 2,
      "item": {
        "@id": "/users",
        "name": "Users"
      }
    },
    {
      "@type": "ListItem",
      "position": 3,
      "item": {
        "name": "Error"
      }
    },
    {
      "@type": "ListItem",
      "position": 4,
      "item": {
        "name": "Delete user"
      }
    }
  ]
}
  </script>
  <div
    class="page-header"
  >
    <h1
      class="page-header__heading "
    >
      Error
    </h1>
  </div>
  <div
    class="alert alert--error"
    role="alert"
  >
    <h2>
      Whoops
    </h2>
    <p>
      Sorry, there's been an error!
    </p>
  </div>
</div>
`;
